[package]
name = "kernel_core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
walkdir = "2"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["clock"] }

pyo3 = { version = "0.29", features = ["macros"] }
mlua = { version = "0.11", features = ["lua54", "vendored"] }

[lib]
name = "kernel_core"
path = "src/lib.rs"

[[bin]]
name = "kernel-core-demo"
path = "src/main.rs"
